; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_vxlan.c_vxlan_ftable_entry_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_vxlan.c_vxlan_ftable_entry_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vxlan_softc = type { i64 }
%struct.vxlan_ftable_entry = type { i32, i32, i64, i32 }
%struct.sockaddr = type { i32 }

@time_uptime = common dso_local global i64 0, align 8
@ETHER_ADDR_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vxlan_softc*, %struct.vxlan_ftable_entry*, i32*, %struct.sockaddr*, i32)* @vxlan_ftable_entry_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vxlan_ftable_entry_init(%struct.vxlan_softc* %0, %struct.vxlan_ftable_entry* %1, i32* %2, %struct.sockaddr* %3, i32 %4) #0 {
  %6 = alloca %struct.vxlan_softc*, align 8
  %7 = alloca %struct.vxlan_ftable_entry*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.sockaddr*, align 8
  %10 = alloca i32, align 4
  store %struct.vxlan_softc* %0, %struct.vxlan_softc** %6, align 8
  store %struct.vxlan_ftable_entry* %1, %struct.vxlan_ftable_entry** %7, align 8
  store i32* %2, i32** %8, align 8
  store %struct.sockaddr* %3, %struct.sockaddr** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.vxlan_ftable_entry*, %struct.vxlan_ftable_entry** %7, align 8
  %13 = getelementptr inbounds %struct.vxlan_ftable_entry, %struct.vxlan_ftable_entry* %12, i32 0, i32 3
  store i32 %11, i32* %13, align 8
  %14 = load i64, i64* @time_uptime, align 8
  %15 = load %struct.vxlan_softc*, %struct.vxlan_softc** %6, align 8
  %16 = getelementptr inbounds %struct.vxlan_softc, %struct.vxlan_softc* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %14, %17
  %19 = load %struct.vxlan_ftable_entry*, %struct.vxlan_ftable_entry** %7, align 8
  %20 = getelementptr inbounds %struct.vxlan_ftable_entry, %struct.vxlan_ftable_entry* %19, i32 0, i32 2
  store i64 %18, i64* %20, align 8
  %21 = load %struct.vxlan_ftable_entry*, %struct.vxlan_ftable_entry** %7, align 8
  %22 = getelementptr inbounds %struct.vxlan_ftable_entry, %struct.vxlan_ftable_entry* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* @ETHER_ADDR_LEN, align 4
  %26 = call i32 @memcpy(i32 %23, i32* %24, i32 %25)
  %27 = load %struct.vxlan_ftable_entry*, %struct.vxlan_ftable_entry** %7, align 8
  %28 = getelementptr inbounds %struct.vxlan_ftable_entry, %struct.vxlan_ftable_entry* %27, i32 0, i32 0
  %29 = load %struct.sockaddr*, %struct.sockaddr** %9, align 8
  %30 = call i32 @vxlan_sockaddr_copy(i32* %28, %struct.sockaddr* %29)
  ret void
}

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @vxlan_sockaddr_copy(i32*, %struct.sockaddr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
